--- a/result/2022-01-12.md
+++ b/result/2022-01-12.md
@@ -20,19 +20,20 @@
 20. [第一次去婆家的仪式感](https://s.weibo.com//weibo?q=%23%E7%AC%AC%E4%B8%80%E6%AC%A1%E5%8E%BB%E5%A9%86%E5%AE%B6%E7%9A%84%E4%BB%AA%E5%BC%8F%E6%84%9F%23&Refer=top) 253644
 21. [孕妇家中早产民警6分钟抬下6楼](https://s.weibo.com//weibo?q=%23%E5%AD%95%E5%A6%87%E5%AE%B6%E4%B8%AD%E6%97%A9%E4%BA%A7%E6%B0%91%E8%AD%A66%E5%88%86%E9%92%9F%E6%8A%AC%E4%B8%8B6%E6%A5%BC%23&Refer=top) 241801
 22. [鸡蛋也能吃出螃蟹的味道](https://s.weibo.com//weibo?q=%23%E9%B8%A1%E8%9B%8B%E4%B9%9F%E8%83%BD%E5%90%83%E5%87%BA%E8%9E%83%E8%9F%B9%E7%9A%84%E5%91%B3%E9%81%93%23&Refer=top) 239879
-23. [深圳累计报告8例新冠肺炎确诊病例](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E7%B4%AF%E8%AE%A1%E6%8A%A5%E5%91%8A8%E4%BE%8B%E6%96%B0%E5%86%A0%E8%82%BA%E7%82%8E%E7%A1%AE%E8%AF%8A%E7%97%85%E4%BE%8B%23&Refer=top) 211711
+23. [深圳累计报告8例新冠肺炎确诊病例](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E7%B4%AF%E8%AE%A1%E6%8A%A5%E5%91%8A8%E4%BE%8B%E6%96%B0%E5%86%A0%E8%82%BA%E7%82%8E%E7%A1%AE%E8%AF%8A%E7%97%85%E4%BE%8B%23&Refer=top) 228680
 24. [事发前刘鑫阻止江歌报警](https://s.weibo.com//weibo?q=%23%E4%BA%8B%E5%8F%91%E5%89%8D%E5%88%98%E9%91%AB%E9%98%BB%E6%AD%A2%E6%B1%9F%E6%AD%8C%E6%8A%A5%E8%AD%A6%23&Refer=top) 209724
 25. [感染奥密克戎症状有何不同](https://s.weibo.com//weibo?q=%23%E6%84%9F%E6%9F%93%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%E7%97%87%E7%8A%B6%E6%9C%89%E4%BD%95%E4%B8%8D%E5%90%8C%23&Refer=top) 203594
 26. [旅游博主亵渎烈士墓案终审维持原判](https://s.weibo.com//weibo?q=%23%E6%97%85%E6%B8%B8%E5%8D%9A%E4%B8%BB%E4%BA%B5%E6%B8%8E%E7%83%88%E5%A3%AB%E5%A2%93%E6%A1%88%E7%BB%88%E5%AE%A1%E7%BB%B4%E6%8C%81%E5%8E%9F%E5%88%A4%23&Refer=top) 192060
 27. [双减后的第一个期末考](https://s.weibo.com//weibo?q=%23%E5%8F%8C%E5%87%8F%E5%90%8E%E7%9A%84%E7%AC%AC%E4%B8%80%E4%B8%AA%E6%9C%9F%E6%9C%AB%E8%80%83%23&Refer=top) 191378
-28. [女儿拿30多张奖状掏干爸爸私房钱](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%84%BF%E6%8B%BF30%E5%A4%9A%E5%BC%A0%E5%A5%96%E7%8A%B6%E6%8E%8F%E5%B9%B2%E7%88%B8%E7%88%B8%E7%A7%81%E6%88%BF%E9%92%B1%23&Refer=top) 170203
-29. [西安滞留人员离开西安政策公布](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%BB%9E%E7%95%99%E4%BA%BA%E5%91%98%E7%A6%BB%E5%BC%80%E8%A5%BF%E5%AE%89%E6%94%BF%E7%AD%96%E5%85%AC%E5%B8%83%23&Refer=top) 169547
-30. [立陶宛政府背信弃义遭到国内外普遍反对](https://s.weibo.com//weibo?q=%23%E7%AB%8B%E9%99%B6%E5%AE%9B%E6%94%BF%E5%BA%9C%E8%83%8C%E4%BF%A1%E5%BC%83%E4%B9%89%E9%81%AD%E5%88%B0%E5%9B%BD%E5%86%85%E5%A4%96%E6%99%AE%E9%81%8D%E5%8F%8D%E5%AF%B9%23&Refer=top) 168234
-31. [这是我人生中笑得最惨的一次](https://s.weibo.com//weibo?q=%E8%BF%99%E6%98%AF%E6%88%91%E4%BA%BA%E7%94%9F%E4%B8%AD%E7%AC%91%E5%BE%97%E6%9C%80%E6%83%A8%E7%9A%84%E4%B8%80%E6%AC%A1&Refer=top) 164890
-32. [90后小伙2年拍摄60种秘境鲜花](https://s.weibo.com//weibo?q=%2390%E5%90%8E%E5%B0%8F%E4%BC%992%E5%B9%B4%E6%8B%8D%E6%91%8460%E7%A7%8D%E7%A7%98%E5%A2%83%E9%B2%9C%E8%8A%B1%23&Refer=top) 163433
-33. [深圳宝安](https://s.weibo.com//weibo?q=%E6%B7%B1%E5%9C%B3%E5%AE%9D%E5%AE%89&Refer=top) 160336
-34. [我妈偶像和我的偶像同框了](https://s.weibo.com//weibo?q=%23%E6%88%91%E5%A6%88%E5%81%B6%E5%83%8F%E5%92%8C%E6%88%91%E7%9A%84%E5%81%B6%E5%83%8F%E5%90%8C%E6%A1%86%E4%BA%86%23&Refer=top) 160089
-35. [被陌生人的善良整破防了](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E9%99%8C%E7%94%9F%E4%BA%BA%E7%9A%84%E5%96%84%E8%89%AF%E6%95%B4%E7%A0%B4%E9%98%B2%E4%BA%86%23&Refer=top) 156089
-36. [天津全员核酸已检出77例阳性](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E5%85%A8%E5%91%98%E6%A0%B8%E9%85%B8%E5%B7%B2%E6%A3%80%E5%87%BA77%E4%BE%8B%E9%98%B3%E6%80%A7%23&Refer=top) 150604
-37. [医护支援西安入户采样偶遇家人](https://s.weibo.com//weibo?q=%23%E5%8C%BB%E6%8A%A4%E6%94%AF%E6%8F%B4%E8%A5%BF%E5%AE%89%E5%85%A5%E6%88%B7%E9%87%87%E6%A0%B7%E5%81%B6%E9%81%87%E5%AE%B6%E4%BA%BA%23&Refer=top) 141416
+28. [医护支援西安入户采样偶遇家人](https://s.weibo.com//weibo?q=%23%E5%8C%BB%E6%8A%A4%E6%94%AF%E6%8F%B4%E8%A5%BF%E5%AE%89%E5%85%A5%E6%88%B7%E9%87%87%E6%A0%B7%E5%81%B6%E9%81%87%E5%AE%B6%E4%BA%BA%23&Refer=top) 191354
+29. [女儿拿30多张奖状掏干爸爸私房钱](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%84%BF%E6%8B%BF30%E5%A4%9A%E5%BC%A0%E5%A5%96%E7%8A%B6%E6%8E%8F%E5%B9%B2%E7%88%B8%E7%88%B8%E7%A7%81%E6%88%BF%E9%92%B1%23&Refer=top) 170203
+30. [西安滞留人员离开西安政策公布](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%BB%9E%E7%95%99%E4%BA%BA%E5%91%98%E7%A6%BB%E5%BC%80%E8%A5%BF%E5%AE%89%E6%94%BF%E7%AD%96%E5%85%AC%E5%B8%83%23&Refer=top) 169547
+31. [立陶宛政府背信弃义遭到国内外普遍反对](https://s.weibo.com//weibo?q=%23%E7%AB%8B%E9%99%B6%E5%AE%9B%E6%94%BF%E5%BA%9C%E8%83%8C%E4%BF%A1%E5%BC%83%E4%B9%89%E9%81%AD%E5%88%B0%E5%9B%BD%E5%86%85%E5%A4%96%E6%99%AE%E9%81%8D%E5%8F%8D%E5%AF%B9%23&Refer=top) 168234
+32. [这是我人生中笑得最惨的一次](https://s.weibo.com//weibo?q=%E8%BF%99%E6%98%AF%E6%88%91%E4%BA%BA%E7%94%9F%E4%B8%AD%E7%AC%91%E5%BE%97%E6%9C%80%E6%83%A8%E7%9A%84%E4%B8%80%E6%AC%A1&Refer=top) 164890
+33. [90后小伙2年拍摄60种秘境鲜花](https://s.weibo.com//weibo?q=%2390%E5%90%8E%E5%B0%8F%E4%BC%992%E5%B9%B4%E6%8B%8D%E6%91%8460%E7%A7%8D%E7%A7%98%E5%A2%83%E9%B2%9C%E8%8A%B1%23&Refer=top) 163433
+34. [深圳宝安](https://s.weibo.com//weibo?q=%E6%B7%B1%E5%9C%B3%E5%AE%9D%E5%AE%89&Refer=top) 160336
+35. [我妈偶像和我的偶像同框了](https://s.weibo.com//weibo?q=%23%E6%88%91%E5%A6%88%E5%81%B6%E5%83%8F%E5%92%8C%E6%88%91%E7%9A%84%E5%81%B6%E5%83%8F%E5%90%8C%E6%A1%86%E4%BA%86%23&Refer=top) 160089
+36. [被陌生人的善良整破防了](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E9%99%8C%E7%94%9F%E4%BA%BA%E7%9A%84%E5%96%84%E8%89%AF%E6%95%B4%E7%A0%B4%E9%98%B2%E4%BA%86%23&Refer=top) 156089
+37. [天津全员核酸已检出77例阳性](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E5%85%A8%E5%91%98%E6%A0%B8%E9%85%B8%E5%B7%B2%E6%A3%80%E5%87%BA77%E4%BE%8B%E9%98%B3%E6%80%A7%23&Refer=top) 150604
 38. [3人居家20天喝400瓶啤酒](https://s.weibo.com//weibo?q=%233%E4%BA%BA%E5%B1%85%E5%AE%B620%E5%A4%A9%E5%96%9D400%E7%93%B6%E5%95%A4%E9%85%92%23&Refer=top) 138221
+39. [媒体评王冰冰遭人肉曝光隐私](https://s.weibo.com//weibo?q=%23%E5%AA%92%E4%BD%93%E8%AF%84%E7%8E%8B%E5%86%B0%E5%86%B0%E9%81%AD%E4%BA%BA%E8%82%89%E6%9B%9D%E5%85%89%E9%9A%90%E7%A7%81%23&Refer=top) 86528
