--- a/result/2022-01-12.md
+++ b/result/2022-01-12.md
@@ -37,3 +37,4 @@
 37. [被陌生人的善良整破防了](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E9%99%8C%E7%94%9F%E4%BA%BA%E7%9A%84%E5%96%84%E8%89%AF%E6%95%B4%E7%A0%B4%E9%98%B2%E4%BA%86%23&Refer=top) 156089
 38. [天津全员核酸已检出77例阳性](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E5%85%A8%E5%91%98%E6%A0%B8%E9%85%B8%E5%B7%B2%E6%A3%80%E5%87%BA77%E4%BE%8B%E9%98%B3%E6%80%A7%23&Refer=top) 150604
 39. [3人居家20天喝400瓶啤酒](https://s.weibo.com//weibo?q=%233%E4%BA%BA%E5%B1%85%E5%AE%B620%E5%A4%A9%E5%96%9D400%E7%93%B6%E5%95%A4%E9%85%92%23&Refer=top) 138221
+40. [分手后不选择回头的原因](https://s.weibo.com//weibo?q=%23%E5%88%86%E6%89%8B%E5%90%8E%E4%B8%8D%E9%80%89%E6%8B%A9%E5%9B%9E%E5%A4%B4%E7%9A%84%E5%8E%9F%E5%9B%A0%23&Refer=top) 60997
