--- a/result/2022-01-12.md
+++ b/result/2022-01-12.md
@@ -40,4 +40,5 @@
 40. [天津全员核酸已检出77例阳性](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E5%85%A8%E5%91%98%E6%A0%B8%E9%85%B8%E5%B7%B2%E6%A3%80%E5%87%BA77%E4%BE%8B%E9%98%B3%E6%80%A7%23&Refer=top) 150604
 41. [3人居家20天喝400瓶啤酒](https://s.weibo.com//weibo?q=%233%E4%BA%BA%E5%B1%85%E5%AE%B620%E5%A4%A9%E5%96%9D400%E7%93%B6%E5%95%A4%E9%85%92%23&Refer=top) 138221
 42. [邓佳鑫晒最佳主持获奖证书](https://s.weibo.com//weibo?q=%E9%82%93%E4%BD%B3%E9%91%AB%E6%99%92%E6%9C%80%E4%BD%B3%E4%B8%BB%E6%8C%81%E8%8E%B7%E5%A5%96%E8%AF%81%E4%B9%A6&Refer=top) 71427
-43. [防控疫情 天津在行动](https://s.weibo.com//weibo?q=%E9%98%B2%E6%8E%A7%E7%96%AB%E6%83%85%20%E5%A4%A9%E6%B4%A5%E5%9C%A8%E8%A1%8C%E5%8A%A8&Refer=top) 31826
+43. [防控疫情 天津在行动](https://s.weibo.com//weibo?q=%E9%98%B2%E6%8E%A7%E7%96%AB%E6%83%85%20%E5%A4%A9%E6%B4%A5%E5%9C%A8%E8%A1%8C%E5%8A%A8&Refer=top) 33013
+44. [全球135个国家和地区报告奥密克戎](https://s.weibo.com//weibo?q=%23%E5%85%A8%E7%90%83135%E4%B8%AA%E5%9B%BD%E5%AE%B6%E5%92%8C%E5%9C%B0%E5%8C%BA%E6%8A%A5%E5%91%8A%E5%A5%A5%E5%AF%86%E5%85%8B%E6%88%8E%23&Refer=top) 14609
